samples/bookinfo/networking/conco-istio-ambient.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-gateway
  namespace: bookinfo
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: productpage-route
  namespace: bookinfo
spec:
  parentRefs:
  - name: http-gateway
    namespace: bookinfo
  hostnames:
  - "productpage.bookinfo.com"
  - "localhost"
  rules:
  - backendRefs:
    - name: productpage
      port: 9080
